--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
- 
+
   <div class="row content">
     <div class="col-md-6">
-      <h2 class="text-center">{{user.name}}</h2>
+      <h2 class="text-center under">{{user.name}}</h2>
       <img src="{{user.avatar_url}}" alt="Profile picture">
     </div>
     <div class="col-md-6">
       <div class="card">
-        <h3 class="card-title text-center ">Profile</h3>
+        <h3 class="card-title text-center under">Profile</h3>
         <div class="card-body">
           <ul class="list-group list-group-flush">
             <li class="list-group-item bg-secondary">{{user.followers}} followers</li>
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="card ">
-    <h3 class="text-center card-title">Repositories</h3>
+    <h3 class="text-center card-title under">Repositories</h3>
     <div *ngFor="let repo of repos">
       <p appChangecolor>{{repo.name}} <br><a href="{{repo.html_url}}" target="_blank" class="btn btn-success ">View repo in github</a></p>
       <p *ngIf="repo.description">{{repo.description}}</p>
