add a text transform pipe to the repo names

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
   <div class="card ">
     <h3 class="text-center card-title under">Repositories</h3>
     <div *ngFor="let repo of repos">
-      <p appChangecolor>{{repo.name}} <br><a href="{{repo.html_url}}" target="_blank" class="btn btn-success ">View repo in github</a></p>
+      <p appChangecolor>{{repo.name | uppercase}} <br><a href="{{repo.html_url}}" target="_blank" class="btn btn-success ">View repo in github</a></p>
       <p *ngIf="repo.description">{{repo.description}}</p>
       <hr>
     </div>
